// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Points Form Component Rendering Tests renders to UI as expected 1`] = `
<form
  className="dashboard__add-member--form"
>
  <h2>
    Add New Member
  </h2>
  <div
    role="alert"
  />
  <div>
    <label
      htmlFor="name"
    >
      Customer Name:
    </label>
    <br />
    <input
      id="name"
      name="name"
      placeholder="Full Name"
      required={true}
      type="text"
    />
  </div>
  <div>
    <label
      htmlFor="email"
    >
      Customer Email:
    </label>
    <br />
    <input
      id="email"
      name="email"
      placeholder="Email"
      required={true}
      type="email"
    />
  </div>
  <div>
    <label
      htmlFor="customer-phone"
    >
      Customer Phone Number:
    </label>
    <br />
    <input
      id="customer-phone"
      name="phone_number"
      pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
      placeholder="734-555-0909"
      required={true}
      type="tel"
    />
  </div>
  <button
    className="create-btn"
    type="submit"
  >
    Create User
  </button>
</form>
`;

exports[`Add Points Form Component Rendering Tests renders to UI as expected with PROPS 1`] = `
<form
  className="dashboard__add-member--form"
  onSubmit={[Function]}
>
  <h2>
    Add New Member
  </h2>
  <div
    role="alert"
  >
    <p
      className="red"
    />
  </div>
  <div>
    <label
      htmlFor="name"
    >
      Customer Name:
    </label>
    <br />
    <input
      id="name"
      name="name"
      onChange={[Function]}
      placeholder="Full Name"
      required={true}
      type="text"
    />
  </div>
  <div>
    <label
      htmlFor="email"
    >
      Customer Email:
    </label>
    <br />
    <input
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      required={true}
      type="email"
    />
  </div>
  <div>
    <label
      htmlFor="customer-phone"
    >
      Customer Phone Number:
    </label>
    <br />
    <input
      id="customer-phone"
      name="phone_number"
      onChange={[Function]}
      pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
      placeholder="734-555-0909"
      required={true}
      type="tel"
    />
  </div>
  <button
    className="create-btn"
    type="submit"
  >
    Create User
  </button>
</form>
`;
